--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^5.0.2
   get_storage: ^2.0.3
   shared_preferences: ^2.0.15
+  sqflite: ^2.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
